Add/update backend code for deployment

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:ebio": "node test_ebio_server_integration.js",
+        "test:ebio:live": "node test_live_ebio_integration.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
