Fix getUserById fallback to fetch student/faculty profiles separately

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "format:check": "prettier --check \"src/**/*.ts\"",
     "seed": "tsx src/seeders/20240101000001-seed-users.ts && tsx src/seeders/20240101000002-seed-demo-data.ts",
     "create-dummy-student": "tsx src/scripts/createDummyStudent.ts",
+    "create-dummy-faculty": "tsx src/scripts/createDummyFaculty.ts",
+    "create-dummy-employees": "tsx src/scripts/createThreeDummyEmployees.ts",
     "regenerate-receipts": "tsx src/scripts/regenerateAllReceipts.ts"
   },
   "keywords": [
