Fix TypeScript errors and update portfolio routes

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:ebio": "node test_ebio_server_integration.js",
-        "test:ebio:live": "node test_live_ebio_integration.js",
+    "test:ebio:live": "node test_live_ebio_integration.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -36,6 +36,7 @@
     "@mantine/core": "^8.3.6",
     "@mantine/hooks": "^8.3.6",
     "@types/multer": "^2.0.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/pdfkit": "^0.17.4",
     "@types/xlsx": "^0.0.35",
     "axios": "^1.13.1",
@@ -48,6 +49,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
+    "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2",
     "pdfmake": "^0.2.20",
     "sequelize": "^6.35.0",
