--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2",
     "pdfmake": "^0.2.20",
+    "puppeteer": "^24.34.0",
     "sequelize": "^6.35.0",
     "umzug": "^3.8.2",
     "uuid": "^13.0.0",
