Fix migration errors and improve server resilience - Fix dateOfBirth handling in faculty/employee profiles - Improve emergency contact saving in employee creation - Fix schedule display in batch details - Make migrations non-blocking to prevent login issues - Add migration copy script for build process

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/migrations/**/*.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"],
   "ts-node": {
     "compilerOptions": {
