--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --exec \"npx tsx\" src/index.ts",
-    "build": "tsc",
+    "build": "tsc && npm run copy:migrations",
+    "copy:migrations": "node scripts/copy-migrations.js",
+    "postbuild": "npm run copy:migrations",
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
